Fix body overflow

--- a/task_layout/style.css
+++ b/task_layout/style.css
@@ -3,8 +3,7 @@ body {
 	margin: 0;
 	height: 100%;
 	font-family: 'Proxima Nova Regular', Arial, sans-serif;
-	font-size: 13pt;
-	overflow: auto; 
+	font-size: 13pt; 
 }
 
 @font-face{
